[gd_scene load_steps=2 format=3 uid="uid://b8nyals8ucpli"]

[ext_resource type="Script" path="res://scripts/bases/maquina.gd" id="1_1aisd"]

[node name="Maquina" type="Node2D"]
script = ExtResource("1_1aisd")

[node name="Textura" type="Sprite2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="FUNCIONARIO_COMEÇOU_A_OPERAR_MAQUINA" from="." to="." method="_on_funcionario_começou_a_operar_maquina"]
[connection signal="FUNCIONARIO_MORREU_NA_MAQUINA" from="." to="." method="_on_funcionario_morreu_na_maquina"]
[connection signal="FUNCIONARIO_PAROU_DE_OPERAR_MAQUINA" from="." to="." method="_on_funcionario_parou_de_operar_maquina"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
